Comments and custom fonts

--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- We defined doctype then title and custom google fonts -->
     <meta charset="UTF-8"/>
     <title>likeanauthor</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
   </head>
   <body>
     <h1>Hi there!</h1>
     <p>
-      As I mentioned before, you can see it like text-quest
+      As I mentioned before, you can see it like text-quest with steps to accomplishments and assessments.
       or something readeble and replicable in your imagination.
-      <br>
+      <br/>
       So do not waste the time look at source code and read through.
       It is not scare.
+      <br/>
     </p>
+    <h1 class="invert">Happy new year</h1>
+    <h1 class="invert"><a href="#">Another link</a></h1>
   </body>
 </html>
