Add counter and some styles

--- a/index.html
+++ b/index.html
@@ -1,22 +1,64 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- We defined doctype then title and custom google fonts -->
+    <!-- We defined doctype then title and custom google fonts.
+         Oh, come on.. don't pretend like you knows nothing about html.
+       -->
     <meta charset="UTF-8"/>
     <title>likeanauthor</title>
+    <!-- Like it is described here https://fonts.google.com/ -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+    <!-- In this step we assume that google is reachable, and provide free fonts
+         Also we could say thanks to them on twitter https://twitter.com/googlefonts
+         If you wouldn't mind about sharing toys.
+       -->
+    <style>
+     body {
+       width: 80%;
+       margin: 2em auto;
+       font-family: sans-serif;
+       color: #333;
+       }
+     h1 {
+       font-family: "Roboto Slab", serif;
+       color: #444;
+       }
+    </style>
   </head>
   <body>
-    <h1>Hi there!</h1>
+    <h1>Congraduations!</h1>
     <p>
-      As I mentioned before, you can see it like text-quest with steps to accomplishments and assessments.
-      or something readeble and replicable in your imagination.
+      Your answered the first questions!
       <br/>
-      So do not waste the time look at source code and read through.
-      It is not scare.
+      But they was about cats and <i>numbers</i>.
       <br/>
+      Next one would be a bit more difficult.
     </p>
-    <h1 class="invert">Happy new year</h1>
-    <h1 class="invert"><a href="#">Another link</a></h1>
+    <hr/>
+    <p>
+      So keep read through text and you will get next clues how to solve this puzzle.
+    </p>
+    <hr/>
+    <h1>
+      Next clue
+    </h1>
+    <code>
+      It stars Jake Gyllenhaal as a U.S. Army captain.
+    </code>
+
+    <!-- Of course you know how to view source code, but could you edit it?
+         May be you the one, who will come up with better solution?
+
+         Next clue:
+
+         Page host.
+
+         But with one remark, host doesn't accept 9 symbols as password.
+         So I put cats amount to get 10.
+
+       -->
+    <!-- Also put here Yandex.Metrika counter to check if you pass step -->
+    <script type="text/javascript"> (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter41541784 = new Ya.Metrika({ id:41541784, clickmap:true, trackLinks:true, accurateTrackBounce:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/41541784" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <!-- /Yandex.Metrika counter -->
   </body>
 </html>
