Change to russian

--- a/index.html
+++ b/index.html
@@ -1,17 +1,9 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- We defined doctype then title and custom google fonts.
-         Oh, come on.. don't pretend like you knows nothing about html.
-       -->
     <meta charset="UTF-8"/>
-    <title>likeanauthor</title>
-    <!-- Like it is described here https://fonts.google.com/ -->
+    <title>Следующая подсказка</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
-    <!-- In this step we assume that google is reachable, and provide free fonts
-         Also we could say thanks to them on twitter https://twitter.com/googlefonts
-         If you wouldn't mind about sharing toys.
-       -->
     <style>
      body {
        width: 80%;
@@ -26,35 +18,34 @@
     </style>
   </head>
   <body>
-    <h1>Congraduations!</h1>
+    <h1>Поздравляю!</h1>
     <p>
-      Your answered the first questions!
+      Ты решил первую задачу.
       <br/>
-      But they was about cats and <i>numbers</i>.
+      В качестве вознаграждения я спрятал для тебя шоколадку.
       <br/>
-      Next one would be a bit more difficult.
+      Ты можешь найти её в деревянном ящике, на кухне, на окне.
     </p>
     <hr/>
     <p>
-      So keep read through text and you will get next clues how to solve this puzzle.
+      Следующая задача потребует от тебя не меньше сообразительности.
     </p>
     <hr/>
     <h1>
-      Next clue
+      Подсказка:
     </h1>
     <code>
-      It stars Jake Gyllenhaal as a U.S. Army captain.
+      В главной роли этого фильма, тот же парнишка что играл Дони Дарко. В этот раз он в роли капитана Колтера Стивенса. Как фильм относится к странице?.. буквально)
     </code>
 
-    <!-- Of course you know how to view source code, but could you edit it?
-         May be you the one, who will come up with better solution?
+    <!-- Конечно же ты умеешь смотреть исходный код.
+         Ты и писать его умеешь. Отчасти поэтому я так извращаться стал)
 
-         Next clue:
+         Шоколадку можешь найти около своей кровати, в коробке со свечками.
 
-         Page host.
+         Следующая подсказка:
 
-         But with one remark, host doesn't accept 9 symbols as password.
-         So I put cats amount to get 10.
+         Её придется искать в репозитории этой страницы.
 
        -->
     <!-- Also put here Yandex.Metrika counter to check if you pass step -->
