--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       Подсказка:
     </h1>
     <code>
-      В главной роли этого фильма, тот же парнишка что играл Дони Дарко. В этот раз он в роли капитана Колтера Стивенса. Как фильм относится к странице?.. буквально)
+      В главной роли этого фильма, тот же парнишка что играл Дони Дарко. В этот раз он в роли капитана Колтера Стивенса. Как фильм относится к странице? - буквально
     </code>
 
     <!-- Конечно же ты умеешь смотреть исходный код.
